...
                                <color key="textColor" red="0.37254901960784315" green="0.43529411764705883" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="1fH-Qn-HcR" userLabel="Log in View">
                                <rect key="frame" x="37.666666666666657" y="306" width="300" height="200"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Correo" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vbn-VU-WSF">
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                        <color key="backgroundColor" red="0.36470589040000001" green="0.58039218189999997" blue="0.75686275960000005" alpha="0.23548737582781457" colorSpace="custom" customColorSpace="displayP3"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Eya-mv-3HQ"/>
                                        </constraints>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contraseña" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9P8-40-7fm">
                                        <rect key="frame" x="0.0" y="75" width="300" height="50"/>
                                        <color key="backgroundColor" red="0.36470589040000001" green="0.58039218189999997" blue="0.75686275960000005" alpha="0.23548737582781457" colorSpace="custom" customColorSpace="displayP3"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Cgr-QT-W7s"/>
                                        </constraints>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xOX-8a-06M">
                                        <rect key="frame" x="0.0" y="150" width="300" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="ljW-rw-u1i"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Login" cornerStyle="capsule">
                                            <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="15"/>
                                            <color key="baseBackgroundColor" red="0.59215686274509804" green="0.82352941176470584" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="LogIn:" destination="TiX-6S-EVo" eventType="touchUpInside" id="bUa-M0-qlX"/>
                                        </connections>
...
