...
        }
        
        
        Auth.auth().signIn(withEmail: CorreoField.text!, password: Contrasenia.text!) { authResult, error in
          if let error = error as? NSError {
            
              let alert = UIAlertController(title: "Error", message: error.localizedDescription, preferredStyle: .alert)
              let ok = UIAlertAction(title: "OK", style: .default)
              alert.addAction(ok)
              self.present(alert, animated: true)
            
          } else {
              
              self.performSegue(withIdentifier: "LogInSegue", sender: self)
...
